<resources>
    <string name="app_name">Amag &#38; Porsche Holding</string>
    <string name="action_settings">Settings</string>
    <string name="fuel">Fuel</string>

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="home">Home</string>

    <string name="consumptions">Consumption</string>
    <string name="deadlines">Deadlines</string>
    <string name="behavior_history">Behavior history</string>
    <string name="stats">Stats</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="insurance">Insurance</string>
    <string name="inspection">Inspection</string>
    <string name="expiration_date">Expiration date: N/A</string>
    <string name="real_time_driver_score">Real-time driver score</string>
    <string name="driver_score">Avg. driver score:</string>

</resources>
