<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hackzurich.android.OBDDeviceActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="none">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"/>
            <CalendarView
                android:id="@+id/insurance_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"></CalendarView>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/insurance_dateview"
                android:layout_height="wrap_content"
                android:text="@string/expiration_date"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center"
                android:paddingTop="10dp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inspection"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"/>
            <CalendarView
                android:id="@+id/inspection_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"></CalendarView>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/inspection_dateview"
                android:layout_height="wrap_content"
                android:text="@string/expiration_date"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center"
                android:paddingTop="10dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    </LinearLayout>
    </ScrollView>